Batch improvemebt
